--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./my-css/glide.core.css">
-    <link rel="stylesheet" href="./my-css/glide.theme.css">
+    <link rel="stylesheet" href="./glide.core.css">
+    <link rel="stylesheet" href="./glide.theme.css">
     <style>
         img {
             max-width: 100%!important;
@@ -40,43 +40,43 @@
                             <div class="glide__track" data-glide-el="track">
                                 <ul class="glide__slides">
                                     <li class="glide__slide">
-                                        <img class="img_slide0 img_slide" onclick="showPopup()" src="./slide-assets/Artboard 1.png" alt="">
+                                        <img class="img_slide0 img_slide" onclick="showPopup()" src="./Artboard 1.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide1 img_slide" src="./slide-assets/2.png" alt="">
+                                        <img class="img_slide1 img_slide" src="./2.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/3.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./3.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/4.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./4.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/5.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./5.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/6.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./6.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/7.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./7.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/8.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./8.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/9.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./9.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/10.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./10.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/11.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./11.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/12.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./12.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./slide-assets/13.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./13.png" alt="">
                                     </li>
                                 </ul>
                             </div>
