--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <div class="glide__track" data-glide-el="track">
                                 <ul class="glide__slides">
                                     <li class="glide__slide">
-                                        <img class="img_slide0 img_slide" onclick="showPopup()" src="./Artboard 1.png" alt="">
+                                        <img class="img_slide0 img_slide" src="./Artboard 1.png" alt="">
                                     </li>
                                     <li class="glide__slide">
                                         <img class="img_slide1 img_slide" src="./2.png" alt="">
@@ -327,7 +327,7 @@
     }
 </style>
 <script>
-    function showPopup() {
+    /*function showPopup() {
         $('.full-row')[0].classList.add('popup');
         $('.container_flex')[0].classList.add('pop_up_container');
         $('.iconn')[0].style.display = 'block';
@@ -338,7 +338,7 @@
         $('.container_flex')[0].classList.remove('pop_up_container');
         $('.iconn')[0].style.display = 'none';
         console.log('done')
-    });
+    });*/
 </script>
 
 </html>
