--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                         <img class="img_slide1 img_slide" src="./2.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./3.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./l-door.png" alt="">
                                     </li>
                                     <li class="glide__slide">
                                         <img class="img_slide2 img_slide" src="./4.png" alt="">
