--- a/index.html
+++ b/index.html
@@ -46,37 +46,37 @@
                                         <img class="img_slide1 img_slide" src="./2.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./l-door.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./latest door.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./4.png" alt="">
-                                    </li>
-                                    <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./5.png" alt="">
-                                    </li>
-                                    <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./6.png" alt="">
-                                    </li>
-                                    <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./7.png" alt="">
-                                    </li>
-                                    <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./8.png" alt="">
-                                    </li>
-                                    <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./9.png" alt="">
-                                    </li>
-                                    <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./10.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./hadeda.png" alt="">
                                     </li>
                                     <li class="glide__slide">
                                         <img class="img_slide2 img_slide" src="./11.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./12.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./6.png" alt="">
                                     </li>
                                     <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./13.png" alt="">
+                                        <img class="img_slide2 img_slide" src="./robot.png" alt="">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img class="img_slide2 img_slide" src="./5.png" alt="">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img class="img_slide2 img_slide" src="./trevor.png" alt="">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img class="img_slide2 img_slide" src="./mrsb.png" alt="">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img class="img_slide2 img_slide" src="./biltong.png" alt="">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img class="img_slide2 img_slide" src="./dry_goods.png" alt="">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img class="img_slide2 img_slide" src="./zam.png" alt="">
                                     </li>
                                 </ul>
                             </div>
@@ -244,10 +244,13 @@
         p_tag: 'Issa whole snack. Issa whole meal. It’s the way to a South African’s heart and a staple for every roadtrip, stadium outing or just chilling at edladleni.'
     }, {
         title: "SAVANNA ‘DRY GOODS <br>The Official Drip for a World Underwater ",
-        p_tag: 'The real makoya! It can be used for anything, and the best part is that it never runs out. One tin lasts a lifetime!'
+        p_tag: 'A unique collection of the dopest waterproof drip currently available in all of South Ahh.'
     }, {
         title: "BRAAI TONGS <br>The Official Steakholder at the Braai",
         p_tag: 'Reserved only for the braai master. The one who possesses this coveted tool is the most important Steakholder at kwi braai.'
+    },{
+        title: "ZAM-BUK <br>The Official Lip Moisturiser",
+        p_tag: 'The real makoya! It can be used for anything, and the best part is that it never runs out. One tin lasts a lifetime!'
     }]
 
     function createElemets(obj) {
