--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                                     <li class="glide__slide">
                                         <img class="img_slide2 img_slide" src="./zam.png" alt="">
                                     </li>
+                                    <li class="glide__slide">
+                                        <img class="img_slide2 img_slide" src="./tong.png" alt="">
+                                    </li>
                                 </ul>
                             </div>
                             <div class="glide__arrows" data-glide-el="controls">
@@ -245,12 +248,12 @@
     }, {
         title: "SAVANNA ‘DRY GOODS <br>The Official Drip for a World Underwater ",
         p_tag: 'A unique collection of the dopest waterproof drip currently available in all of South Ahh.'
-    }, {
-        title: "BRAAI TONGS <br>The Official Steakholder at the Braai",
-        p_tag: 'Reserved only for the braai master. The one who possesses this coveted tool is the most important Steakholder at kwi braai.'
     },{
         title: "ZAM-BUK <br>The Official Lip Moisturiser",
         p_tag: 'The real makoya! It can be used for anything, and the best part is that it never runs out. One tin lasts a lifetime!'
+    } ,{
+        title: "BRAAI TONGS <br>The Official Steakholder at the Braai",
+        p_tag: 'Reserved only for the braai master. The one who possesses this coveted tool is the most important Steakholder at kwi braai.'
     }]
 
     function createElemets(obj) {
