--- a/index.html
+++ b/index.html
@@ -74,13 +74,14 @@
                                     </li>
                                     <li class="glide__slide">
                                         <img class="img_slide2 img_slide" src="./dry_goods.png" alt="">
+                                    </li>  
+                                    <li class="glide__slide">
+                                        <img class="img_slide2 img_slide" src="./tong.png" alt="">
                                     </li>
                                     <li class="glide__slide">
                                         <img class="img_slide2 img_slide" src="./zam.png" alt="">
                                     </li>
-                                    <li class="glide__slide">
-                                        <img class="img_slide2 img_slide" src="./tong.png" alt="">
-                                    </li>
+                                  
                                 </ul>
                             </div>
                             <div class="glide__arrows" data-glide-el="controls">
@@ -119,7 +120,7 @@
 
                                 </div>
                                 <div><button style="border-radius:30px;border:none;background:#345629;color:white;padding-left:20px;padding-right:20px;font-size:20px;font-family: Roboto Condensed;font-weight:bold;padding-top:5px;padding-bottom:5px">
-                            BUY NOW
+                           ADD YOUR ARTEFACT
                           </button>
                                 </div>
                             </div>
