--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <div style="min-width:5%;">
 
             </div>
-            <div><button style="border-radius:30px;border:none;background:#345629;color:white;padding-left:20px;padding-right:20px;font-size:20px;font-family: Roboto Condensed;font-weight:bold;padding-top:5px;padding-bottom:5px">
+            <div><button class="btn_hover" style="border-radius:30px;border:none;background:#345629;color:white;padding-left:20px;padding-right:20px;font-size:20px;font-family: Roboto Condensed;font-weight:bold;padding-top:5px;padding-bottom:5px">
                 BUY NOW
               </button>
             </div>
@@ -331,6 +331,9 @@
         width: 90%;
         border: #345629 2px;
         padding: 40px;
+    }
+    .btn_hover:hover{
+        cursor: pointer;
     }
 </style>
 <script>
