--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
             justify-content: center;
             align-items: center;
         }
+        @media (max-width:800px) {
+        .small {
+            border: none;
+        }
+    }
+    
+    @media (max-width:500px) {
+        .glide__arrow--right {
+            right: -2em;
+        }
+        .glide__arrow--left {
+            left: -1em;
+        }
+        .small {
+            border: none;
+        }
+        .glide button {
+            padding-left: 5px;
+            padding-right: 5px;
+            padding-top: 0px;
+            padding-bottom: 0px;
+        }
+    }
+    
     </style>
 </head>
 
@@ -277,7 +301,7 @@
 
             </div>
             <div><button class="btn_hover" style="border-radius:30px;border:none;background:#345629;color:white;padding-left:20px;padding-right:20px;font-size:20px;font-family: Roboto Condensed;font-weight:bold;padding-top:5px;padding-bottom:5px">
-                BUY NOW
+                ADD YOUR ARTEFACT
               </button>
             </div>
             <br> <br>
