--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             left: -1em;
         }
         .small {
-            border: none;
+            border: none!important;
         }
         .glide button {
             padding-left: 5px;
@@ -315,7 +315,7 @@
         type: 'carousel',
         focusAt: 'center',
         gap: '10px',
-        animationDuration: 1500,
+        animationDuration: 1100,
         perView: 2,
         breakpoints: {
             1024: {
