--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
     @media (max-width:400px){
         .flex_to_grid{
             flex-direction:column;
+            gap: 10px;
         }
     }
 </style>
