--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <div style="min-width:5%;">
 
             </div>
-            <div><button class="btn_hover" style="border-radius:30px;border:none;background:#345629;color:white;padding-left:20px;padding-right:20px;font-size:20px;font-family: Roboto Condensed;font-weight:bold;padding-top:5px;padding-bottom:5px">
+            <div><button class="btn_hover" onclick="goToUpload()" style="border-radius:30px;border:none;background:#345629;color:white;padding-left:20px;padding-right:20px;font-size:20px;font-family: Roboto Condensed;font-weight:bold;padding-top:5px;padding-bottom:5px">
                 ADD YOUR ARTEFACT
               </button>
             </div>
@@ -373,6 +373,10 @@
     TwitterWindow = window.open(url, 'TwitterWindow',width=600,height=300);
     return false;
  }
+    
+    function goToUpload(){
+    window.parent.postMessage('move', "*");
+    }
     /*function showPopup() {
         $('.full-row')[0].classList.add('popup');
         $('.container_flex')[0].classList.add('pop_up_container');
