--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
             </div>
             <div><button class="btn_hover" onclick="goToUpload()" style="border-radius:30px;border:none;background:#345629;color:white;padding-left:20px;padding-right:20px;font-size:20px;font-family: Roboto Condensed;font-weight:bold;padding-top:5px;padding-bottom:5px">
-                ADD YOUR ARTEFACT
+               <a href="#form"> ADD YOUR ARTEFACT</a>
               </button>
             </div>
             <br> <br>
