--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 </style>
 <script>
     function shareOntwitter(){
-    var url = 'https://twitter.com/intent/tweet?url=https://savanna2022.distellwebstaging.co.za/mzansiverse&via=getboldify&text=As Trevor Noah gears up for his 2023 South African Tour, starting on 31 August 2023, it’s only right that we help you (and him) get familiar with the #SavannaMzansiverse.';
+    var url = 'https://twitter.com/intent/tweet?text=As%20Trevor%20Noah%20gears%20up%20for%20his%202023%20South%20African%20Tour,%20starting%20on%2031%20August%202023,%20it%E2%80%99s%20only%20right%20that%20we%20help%20you%20(and%20him)%20get%20familiar%20with%20the%20%20https%3A//savanna.co.za/mzansiverse';
     TwitterWindow = window.open(url, 'TwitterWindow',width=600,height=300);
     return false;
  }
