--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
         p_tag: 'Forget ‘waybill’, think ‘weeh bill’! iSkhaftin is anything. It takes different forms, goes by different names and is used to carry essentials that don’t even belong to the ‘courier’. Whatever needs to be sent, gets there…as long as there’s itransi.'
     }, {
         title: "CRISP, DRY SAVANNA PREMIUM CIDER <br>The Official Bev  ",
-        p_tag: 'Enjoyed as a snack and an iron supplement in South Ahh, this type of soil ina that thing! It has been the handy multi-purpose product for generations before Andy started cleaning with ammonia.  '
+        p_tag: 'This golden, crisp and dry drink is the number one bev that’s been loved since 1996. It’s dry, but you can drink it.'
     }, {
         title: "ROBOT <br>The Official Traffic Regulator ",
-        p_tag: 'Enjoyed as a snack and an iron supplement in South Ahh, this type of soil ina that thing! It has been the handy multi-purpose product for generations before Andy started cleaning with ammonia.  '
+        p_tag: 'While the world worries about robots taking people’s jobs, only in the #Mzansiverse do people take a robot’s job.'
     }, {
         title: "VELLIES <br>The Official Swiss Army Knife of Shoes ",
         p_tag: 'Shoes so comfy, you’ll feel like you’re walking kaalvoet. Works for adventures or even a night out. People might look at you strangely, but at least you’ll be (un)fashionably comfortable. Think of them as Crocs with laces.'
