--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
                                     <li class="glide__slide">
                                         <img class="img_slide0 img_slide" src="./Artboard 1.png" alt="">
                                     </li>
+                                    <!----
                                     <li class="glide__slide">
                                         <img class="img_slide1 img_slide" src="./2.png" alt="">
-                                    </li>
+                                    </li>----->
                                     <li class="glide__slide">
                                         <img class="img_slide2 img_slide" src="./latest door.png" alt="">
                                     </li>
@@ -106,7 +107,9 @@
                                         <img class="img_slide2 img_slide" src="./tong.png" alt="">
                                     </li>
                                    
-                                  
+                                  <li class="glide__slide">
+                                        <img class="img_slide2 img_slide" src="./rock.png" alt="">
+                                    </li>
                                 </ul>
                             </div>
                             <div class="glide__arrows" data-glide-el="controls">
@@ -238,12 +241,13 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
 <script>
+    /*{
+        title: "SHOPPER BAG <br> The Official Carrier You Always Forget ",
+        p_tag: 'There are multiple of them in each house. But somehow, they get forgotten every shopping trip and now you have to buy yet another.'
+    }, */
     var allData = [{
         title: "iBHIBH’ <br> Official Load-shedding Traffic Controller Uniform ",
         p_tag: 'This is the only qualification needed to become an official traffic controller when amarobot doesn’t work.  '
-    }, {
-        title: "SHOPPER BAG <br> The Official Carrier You Always Forget ",
-        p_tag: 'There are multiple of them in each house. But somehow, they get forgotten every shopping trip and now you have to buy yet another.'
     }, {
         title: "UMNYANGO WASE FRONT <br> The Official VIP Home Entrance  ",
         p_tag: 'Just like the cutlery and crockery that only come out on special occasions, this door is not for noma ubani. Even if you live in the house, expect to hear ‘rounda!’ when you knock on it. '
@@ -280,6 +284,9 @@
     } ,{
         title: "BRAAI TONGS <br>The Official Steakholder at the Braai",
         p_tag: 'Reserved only for the braai master. The one who possesses this coveted tool is the most important Steakholder at kwi braai.'
+    },{
+        title: "UMHLABATHI <br>The Official Organic Iron Supplement/Snack/Facemask ",
+        p_tag: 'Enjoyed as a snack and an iron supplement in South Ahh, this type of soil ina that thing! It has been the handy multi-purpose product for generations before Andy started cleaning with ammonia.'
     }]
 
     function createElemets(obj) {
