--- a/index.html
+++ b/index.html
@@ -220,7 +220,17 @@
             display: none;
             width: 100%;
         }
-        
+        .container {
+                max-width: 100%;
+                margin: auto;
+                display: grid;
+                grid-template-columns: 90%;
+                background-image: url('./bg_yellow.png');
+                background-size: cover;
+                background-repeat: no-repeat;
+                align-items: center;
+                justify-content: center;
+            }
         @media (max-width:800px) {
             .container {
                 max-width: 100%;
