--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         
         .small {
             width: 90%;
-            border-right: #345629 1px solid;
+            border-right: none;
             margin: auto;
             padding-right: 20px;
         }
@@ -325,7 +325,7 @@
         type: 'carousel',
         focusAt: 'center',
         gap: '10px',
-        animationDuration: 1100,
+        animationDuration: 1000,
         perView: 2,
         breakpoints: {
             1024: {
